# Script-to-Storyboard-Visual-Planner

./: .env.example  .gitignore  CHANGELOG.md  HANDOFF.md  PROJECT_STATUS.json  README.md  pyproject.toml
config/: development.json  production.example.json
docs/: AI_COLLABORATION.md  ARCHITECTURE.md  GUI.md  PROMA_EXECUTION_BRIEF.md  PROMA_V1_RELEASE_PLAN.md  PROMA_V1_REVIEW_AGENT_HARNESS_PLAN.md  ROADMAP.md
docs/design/: provider_probe_design.md
harness/: README.md  fake_model_e2e.py  permission_boundaries.py  smoke_cli.py  smoke_gui.py  smoke_install.py
harness/agent_scenarios/: approval_required_write.json  batch_continuity.json  diagnose_failed_run.json  diagnose_fallback_used.json  diagnose_partial_run.json  diagnose_secret_redaction.json  provider_probe_gate_closed.json  provider_probe_opt_in.json  review_prompt_refs.json  run_all.py
planner/: __init__.py  __main__.py  annotations.py  batch.py  beats.py  bible.py  cli.py  env.py  exceptions.py  export.py  io_utils.py  manifest.py  model_config.py  parser.py  pipeline.py  project.py  prompts.py  schema.py  shots.py  validate.py
planner/agent/: __init__.py  cli.py  diagnose.py  readers.py  redact.py  review.py  tools.py
planner/providers/: __init__.py  anthropic_adapter.py  base.py  deterministic.py  openai_adapter.py  registry.py  (+1 more)
specs/: DATA_CONTRACTS.md
tests/: conftest.py  test_agent_cli.py  test_agent_diagnose.py  test_agent_readers.py  test_agent_redact.py  test_agent_review.py  test_agent_tools.py  test_batch.py  test_boundaries.py  test_cli_provider_probe.py  test_env.py  test_export.py  test_model_config.py  test_model_config_pipeline.py  test_openai_anthropic_adapter.py  test_openai_compatible_adapter.py  test_parser.py  test_pipeline.py  test_project.py  test_provider_health.py  test_provider_probe.py  test_providers.py  test_schema_errors.py  test_web_api.py  test_web_launcher_import.py  test_web_run_service.py  test_web_static_ui.py  test_wheel_packaging.py
(+17 files in other folders)
